# transmoglyphier

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/transmoglyphier/: __about__.py  glyphs.py  transmoglyphier.py  transmoglyphier.tcss
src/transmoglyphier/assets/glyphs/block/art/: deco_caps.json  routing.json
src/transmoglyphier/assets/glyphs/block/sans/: base_10_digits.json  basic_latin.json  seven_segment.json
src/transmoglyphier/assets/glyphs/block/serif/: base_10_digits.json  basic_latin.json
src/transmoglyphier/assets/glyphs/box/art/: deco.json  deco_caps.json  routing.json
src/transmoglyphier/assets/glyphs/box/sans/: base_10_digits.json  basic_latin.json  seven_segment.json
src/transmoglyphier/assets/glyphs/box/serif/: base_10_digits.json  basic_latin.json
tests/: __init__.py
tooling/: pictogplyph.py
