[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transmoglyphier"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Frisco Rose", email = "friscorose@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "textual"
]

[project.urls]
Documentation = "https://github.com/Frisco Rose/transmoglyphier#readme"
Issues = "https://github.com/Frisco Rose/transmoglyphier/issues"
Source = "https://github.com/Frisco Rose/transmoglyphier"

[tool.hatch.version]
path = "src/transmoglyphier/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/transmoglyphier tests}"

[tool.coverage.run]
source_pkgs = ["transmoglyphier", "tests"]
branch = true
parallel = true
omit = [
  "src/transmoglyphier/__about__.py",
]

[tool.coverage.paths]
transmoglyphier = ["src/transmoglyphier", "*/transmoglyphier/src/transmoglyphier"]
tests = ["tests", "*/transmoglyphier/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
